bugfix font family | aframe compoenent interacting with vuex

--- a/src/assets/sass/Slidemersive.sass
+++ b/src/assets/sass/Slidemersive.sass
@@ -2,7 +2,7 @@
 // IMPORTS //
 /////////////
 // NORMALIZE
-@import ./imports/_normalize
+// @import ./imports/_normalize
 
 // BASIC MIXINS
 @import ./imports/_helpers
